2022-04-14T00:39:14Z:
* notice: last 14d: all unq: 2201 12
* notice: prev accum: outdated-all outdated-unq / all unq: 12541 364 / 14747 408
* notice: next accum: outdated-all outdated-unq / all unq: 12718 373 / 14919 408
* notice: prev json diff // prev day diff: unq all: +0 +54 / -0 -17 // +0 +54 / -0 -17

2022-04-13T16:09:11Z:
* notice: last 14d: all unq: 2206 13
* notice: prev accum: outdated-all outdated-unq / all unq: 12541 364 / 14745 408
* notice: next accum: outdated-all outdated-unq / all unq: 12541 364 / 14747 408
* notice: prev json diff // prev day diff: unq all: +0 +53 / -0 -51 // +1 +156 / -0 -135

2022-04-13T08:09:53Z:
* notice: last 14d: all unq: 2204 13
* notice: prev accum: outdated-all outdated-unq / all unq: 12541 364 / 14764 407
* notice: next accum: outdated-all outdated-unq / all unq: 12541 364 / 14745 408
* notice: prev json diff // prev day diff: unq all: +1 +49 / -0 -68 // +1 +103 / -0 -84

2022-04-13T00:34:05Z:
* notice: last 14d: all unq: 2223 13
* notice: prev accum: outdated-all outdated-unq / all unq: 12344 352 / 14583 407
* notice: next accum: outdated-all outdated-unq / all unq: 12541 364 / 14764 407
* notice: prev json diff // prev day diff: unq all: +0 +54 / -0 -16 // +0 +54 / -0 -16

2022-04-12T16:07:24Z:
* notice: last 14d: all unq: 2239 17
* notice: prev accum: outdated-all outdated-unq / all unq: 12344 352 / 14589 407
* notice: next accum: outdated-all outdated-unq / all unq: 12344 352 / 14583 407
* notice: prev json diff // prev day diff: unq all: +0 +53 / -0 -59 // +2 +157 / -0 -143

2022-04-12T08:09:41Z:
* notice: last 14d: all unq: 2245 17
* notice: prev accum: outdated-all outdated-unq / all unq: 12344 352 / 14608 406
* notice: next accum: outdated-all outdated-unq / all unq: 12344 352 / 14589 407
* notice: prev json diff // prev day diff: unq all: +1 +49 / -0 -68 // +2 +104 / -0 -84

2022-04-12T00:30:17Z:
* notice: last 14d: all unq: 2264 17
* notice: prev accum: outdated-all outdated-unq / all unq: 12171 342 / 14420 403