@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-04-14T00:39:14Z",
-  "count" : 146,
+  "timestamp" : "2022-04-14T08:13:20Z",
+  "count" : 68,
   "count_minmax" : [ 0, 163 ],
   "count_prev_day_inc" : 188,
   "count_prev_day_dec" : 136,
-  "uniques" : 6,
+  "uniques" : 2,
   "uniques_minmax" : [ 0, 6 ],
   "uniques_prev_day_inc" : 12,
   "uniques_prev_day_dec" : 0
