@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-14T00:39:14Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 54,
-  "count_prev_day_dec" : 17,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-04-14T08:13:20Z",
+  "count" : 49,
+  "count_minmax" : [ 0, 49 ],
+  "count_prev_day_inc" : 105,
+  "count_prev_day_dec" : 95,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 1,
+  "uniques_prev_day_dec" : 4
 }
