@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-04-14T00:39:14Z",
+  "timestamp" : "2022-04-14T08:13:20Z",
   "count_outdated" : 12718,
   "uniques_outdated" : 373,
-  "count" : 14919,
-  "uniques" : 408,
+  "count" : 14892,
+  "uniques" : 405,
   "clones" : [
     {
       "timestamp": "2022-03-31T00:00:00Z",
-      "count": 146,
+      "count": 68,
       "count_minmax": [ 0, 163 ],
-      "uniques": 6,
+      "uniques": 2,
       "uniques_minmax": [ 0, 6 ]
     },
     {
@@ -98,8 +98,15 @@
     },
     {
       "timestamp": "2022-04-13T00:00:00Z",
-      "count": 154,
-      "count_minmax": [ 0, 154 ],
+      "count": 156,
+      "count_minmax": [ 0, 156 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-14T00:00:00Z",
+      "count": 49,
+      "count_minmax": [ 0, 49 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
