@@ -1,11 +1,11 @@
 {
-  "count": 2201,
-  "uniques": 12,
+  "count": 2174,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-03-31T00:00:00Z",
-      "count": 146,
-      "uniques": 6
+      "count": 68,
+      "uniques": 2
     },
     {
       "timestamp": "2022-04-01T00:00:00Z",
@@ -69,7 +69,12 @@
     },
     {
       "timestamp": "2022-04-13T00:00:00Z",
-      "count": 154,
+      "count": 156,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-14T00:00:00Z",
+      "count": 49,
       "uniques": 1
     }
   ]
