@@ -1,3 +1,9 @@
+2022-04-14T08:13:20Z:
+* notice: last 14d: all unq: 2174 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 12718 373 / 14919 408
+* notice: next accum: outdated-all outdated-unq / all unq: 12718 373 / 14892 405
+* notice: prev json diff // prev day diff: unq all: +1 +51 / -4 -78 // +1 +105 / -4 -95
+
 2022-04-14T00:39:14Z:
 * notice: last 14d: all unq: 2201 12
 * notice: prev accum: outdated-all outdated-unq / all unq: 12541 364 / 14747 408
